welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:6: error: not found: value get
      setPos(get(X),getY()+1)
             ^ZigZag:6: error: not found: value X
      setPos(get(X),getY()+1)
                 ^